RESOLVED FIXED21230
QWebPage::CopyLinkToClipboard action doesn't copy url to QClipboard::Selection
https://bugs.webkit.org/show_bug.cgi?id=21230
Summary QWebPage::CopyLinkToClipboard action doesn't copy url to QClipboard::Selection
Benjamin Meyer
Reported 2008-09-29 21:51:14 PDT
What steps will reproduce the problem? 0. Using Arora or the demo browser 1. Find yourself a link, right click on it and select Copy Link Location 2. Try to paste it with middle click in e.g. xterm What is the expected output? What do you see instead? Expected output: link pasted in xterm. Instead: previous selection is pasted. What version of the product are you using? On what operating system? Arora 0.4 (Change: 342 48995a0) on ArchLinux Please provide any additional information below. I guess this happens because link is only being copied to QClipboard::Clipboard. You can still paste the link with Ctrl+V. See http://standards.freedesktop.org/clipboards-spec/clipboards-latest.txt QWebView::pageAction(QWebPage::CopyLinkToClipboard)->trigger(); is the action that is being called. Testing with FireFox and Konq they both copy it to QClipboard::Selection
Attachments
patch to fix the bug (1.99 KB, patch)
2009-02-28 19:37 PST, Benjamin Meyer
staikos: review+
Benjamin Meyer
Comment 1 2009-02-28 19:37:42 PST
Created attachment 28129 [details] patch to fix the bug
Adam Treat
Comment 2 2009-03-02 08:55:51 PST
Landed with r41360.
Note You need to log in before you can comment on or make changes to this bug.