2009-03-02  Benjamin C Meyer  <benjamin.meyer@torchmobile.com>

Reviewed by George Staikos.

        https://bugs.webkit.org/show_bug.cgi?id=21230
        On X11 match the behavior of Firefox and also copy the url to the
        clipboard selection when the action Copy Link Location is executed.

        * Api/qwebpage.cpp:
        (QWebPage::triggerAction):

Canonical link: https://commits.webkit.org/33430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41360 268f45cc-cd09-0410-ab3c-d52691b4dbfc